<?xml version="1.0"?>
<package format="2">
  <name>two_scara_collaboration</name>
  <version>0.0.0</version>
  <description>The two_scara_collaboration package</description>

  <maintainer email="yang@todo.todo">yang</maintainer>
  <maintainer email="eduardo.rasgado@outlook.com">Eduardo Rasgado Ruiz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
    
  </export>
</package>
